# bluepass

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/ble_hid_device/: CMakeLists.txt  ble_hid_device.c
components/ble_hid_host/: CMakeLists.txt  (+2 more)
components/web_ui/: CMakeLists.txt  web_ui.c
components/web_ui/include/: web_ui.h
components/web_ui/www/: index.html
docs/: index.html  keycodes.md  manifest-2.0.0-beta-enc.json  manifest-2.0.0-beta.json  manifest-2.0.1-beta-enc.json  manifest-2.0.1-beta.json  manifest-2.0.10-beta-enc.json  manifest-2.0.10-beta.json  manifest-2.0.11-beta-enc.json  manifest-2.0.11-beta.json  manifest-2.0.12-beta-enc.json  manifest-2.0.12-beta.json  manifest-2.0.13-beta-enc.json  manifest-2.0.13-beta.json  manifest-2.0.14-beta-enc.json  manifest-2.0.14-beta.json  manifest-2.0.15-beta-enc.json  manifest-2.0.15-beta.json  manifest-2.0.16-beta-enc.json  manifest-2.0.16-beta.json  manifest-2.0.17-beta-enc.json  manifest-2.0.17-beta.json  manifest-2.0.18-beta-enc.json  manifest-2.0.18-beta.json  manifest-2.0.2-beta-enc.json  manifest-2.0.2-beta.json  manifest-2.0.3-beta-enc.json  manifest-2.0.3-beta.json  manifest-2.0.4-beta-enc.json  manifest-2.0.4-beta.json  manifest-2.0.5-beta-enc.json  manifest-2.0.5-beta.json  manifest-2.0.6-beta-enc.json  manifest-2.0.6-beta.json  manifest-2.0.7-beta-enc.json  manifest-2.0.7-beta.json  manifest-2.0.8-beta-enc.json  manifest-2.0.8-beta.json  manifest-2.0.9-beta-enc.json  manifest-2.0.9-beta.json  (+3 more)
firmware/: README.md
main/: CMakeLists.txt  main.c
(+35 files in other folders)
